--- a/index.html
+++ b/index.html
@@ -5,9 +5,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header section start -->
+
+    <header>
+        <section class="hero">
+            <div class="hero-section">
+                <div class="hero-text">
+                    <h1>Conmebol Copa America 2021</h1>
+                    <button><a target="_blank" href="https://www.goal.com/en-in.">Watch Live<i class="fas fa-arrow-right"></i></a></button>
+                </div>
+                <div class="hero-image">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
+
+    <!-- main section start -->
+    <main>
+        <!-- player section start -->
+        <section class="container">
+            <div class="players-section">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-7.png" alt="">                    <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-8.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-9.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-10.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-11.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-12.png" alt="">
+                        <h3>Neymar Jr</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-- highlight section start -->
+        <section class="container">
+            <div class="highlight-section">
+                <div class="highlight-text">
+                    <h1>All Highlights <br>
+                        Copa America 2021</h1>
+                    <button><a target="_blank" href="https://www.goal.com/en-in.">Watch Live<i class="fas fa-arrow-right"></i></a></button>
+                </div>
+                <div class="highlight-image">
+                    <img src="images/match.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- footer section start -->
+    <footer>
+        <div class="footer-section">
+            <div class="footer-logo">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="footer-icon">
+                <ul>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-dribbble"></i></li>
+                    <li><i class="fab fa-youtube"></i></li>
+                </ul>
+            </div>
+            <div class="copyright-section">
+                <p><p>Copyright  &copy; 2022 Football</p></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
