--- a/index.html
+++ b/index.html
@@ -109,6 +109,66 @@
                 </div>
             </div>
         </section>
+
+        <!-- upcoming match section start --> 
+        <section class="container">
+            <div class="upcoming-match">
+                <div class="match-title">
+                    <h2>Next match</h2>
+                </div>
+                <div class="match">
+                    <img src="images/Team/argentina.png" alt="">
+                    <h2>VS</h2>
+                    <img src="images/Team/brazil-removebg-preview.png" alt="">
+                    <!-- <div class="team1">
+
+                    </div> -->
+                    <!-- <div class="vs">
+
+                    </div>
+                    <div class="team2">
+
+                    </div> -->
+                </div>
+                <div class="scedule">
+                    <h3>July 11th, 2021 <br> 6:00 AM GMT+6</h3>
+                </div>
+            </div>
+        </section>
+
+        <!-- trophy section start -->        
+        <section class="container">
+            
+            <h2 class="awards">AWARDS</h2>
+            <div class="tropies">
+
+                <div class="trophy">
+                    <img src="images/Trophy/cup_3.png" alt="">
+                    <h4>Champion</h4>
+                </div>
+
+                <div class="trophy">
+                    <img src="images/Trophy/cup_1.png" alt="">
+                    <h4>Runners-up</h4>
+                </div>
+
+                <div class="trophy">
+                    <img style="width: 70px;" src="images/Trophy/cup_2.png" alt="">
+                    <h4>Golden Ball</h4>
+                </div>
+
+                <div class="trophy">   
+                <img src="images/Trophy/cup_5.png" alt="">
+                <h4>Golden Boot</h4>
+                </div>
+
+                <div class="trophy">                
+                <img src="images/Trophy/glove-removebg-preview.png" alt="">
+                <h4>Golden glove</h4>
+                </div>
+
+            </div>
+        </section>
     </main>
 
     <!-- footer section start -->
