--- a/index.html
+++ b/index.html
@@ -34,61 +34,62 @@
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
                         <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club PSG and the Brazil national team. </p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Lionel Messi</h3>
+                        <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Cristiano Ronaldo</h3>
+                        <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Paulo Dybala</h3>
+                        <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team..</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Mesut Özil</h3>
+                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King".</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Mauro Icardi</h3>
+                        <p>Mauro Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-7.png" alt="">                    <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <img src="images/players/player-7.png" alt="">
+                        <h3>Ángel Di María</h3>
+                        <p>Ángel Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-8.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Kylian Mbappé</h3>
+                        <p>Kylian Mbappé is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-9.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Mohamed Salah</h3>
+                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-10.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Harry Kane</h3>
+                        <p>Harry Kane is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-11.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Kevin De Bruyne</h3>
+                        <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, </p>
                     </div>
                     <div class="player">
                         <img src="images/players/player-12.png" alt="">
-                        <h3>Neymar Jr</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <h3>Philippe Coutinho</h3>
+                        <p>Philippe Coutinho is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
                     </div>
                 </div>
             </div>
@@ -120,15 +121,6 @@
                     <img src="images/Team/argentina.png" alt="">
                     <h2>VS</h2>
                     <img src="images/Team/brazil-removebg-preview.png" alt="">
-                    <!-- <div class="team1">
-
-                    </div> -->
-                    <!-- <div class="vs">
-
-                    </div>
-                    <div class="team2">
-
-                    </div> -->
                 </div>
                 <div class="scedule">
                     <h3>July 11th, 2021 <br> 6:00 AM GMT+6</h3>
@@ -138,7 +130,7 @@
 
         <!-- trophy section start -->        
         <section class="container">
-            
+
             <h2 class="awards">AWARDS</h2>
             <div class="tropies">
 
@@ -173,7 +165,7 @@
 
     <!-- footer section start -->
     <footer>
-        <div class="footer-section">
+        <section class="footer-section">
             <div class="footer-logo">
                 <img src="images/Logo.png" alt="">
             </div>
@@ -188,7 +180,7 @@
             <div class="copyright-section">
                 <p><p>Copyright  &copy; 2022 Football</p></p>
             </div>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
