--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- trophy section start -->        
         <section class="container">
 
-            <h2 class="awards">AWARDS</h2>
+            <h2 class="awards">Awards</h2>
             <div class="tropies">
 
                 <div class="trophy">
