--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <div class="highlight-text">
                     <h1>All Highlights <br>
                         Copa America 2021</h1>
+                    <p>Copa America Final 2021, Argentina vs Brazil Football Highlights: Lionel Messi won his first major International trophy as Argentina beat Brazil 1-0 in Copa America final</p>
                     <button><a target="_blank" href="https://www.goal.com/en-in.">Watch Live<i class="fas fa-arrow-right"></i></a></button>
                 </div>
                 <div class="highlight-image">
@@ -131,7 +132,7 @@
         <!-- trophy section start -->        
         <section class="container">
 
-            <h2 class="awards">Awards</h2>
+            <h2 style="font-size: 48px;" class="awards">Awards</h2>
             <div class="tropies">
 
                 <div class="trophy">
