--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                     <h4>Golden Ball</h4>
                 </div>
 
-                <div class="trophy">   
-                <img src="images/Trophy/cup_5.png" alt="">
-                <h4>Golden Boot</h4>
-                </div>
-
                 <div class="trophy">                
                 <img src="images/Trophy/glove-removebg-preview.png" alt="">
                 <h4>Golden glove</h4>
+                </div>
+
+                <div class="trophy">   
+                    <img class="boot" src="images/Trophy/boot-removebg-preview.png" alt="">
+                    <h4>Golden Boot</h4>
                 </div>
 
             </div>
